--- a/index.html
+++ b/index.html
@@ -6,10 +6,146 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary container">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="Bootstrap">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form> -->
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- image-slider -->
+        <section class="container">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active mt-5 ">
+                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone
+                                </h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$420</h1>
+                                <button type="button" class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
 
+                    </div>
+                    <div class="carousel-item active mt-5">
+                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports
+                                </h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front of
+                                    tv.
+                                </p>
+                                <h1>$1200</h1>
+                                <button type="button" class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item active mt-5">
+                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                            <div class="col-lg-7">
+                                <h1>X-Box for your living room
+                                </h1>
+                                <p>This is the best x-box in the world for people who just want to waste time in front
+                                    of
+                                    fake sports.
+                                </p>
+                                <h1>$600</h1>
+                                <button type="button" class="btn btn-warning">Buy Now</button>
+                            </div>
+                            <div class="col-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+
+    </header>
+    <main>
+        <section class="container">
+            <div class="row g-4 my-5">
+                <div class="col-4">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded">
+                        <h1>Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="p-3 border bg-info d-flex align-items-center justify-content-between rounded">
+                        <h1>Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <footer></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
