--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form> -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#bags">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subs">Subscribe</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- image-slider -->
-        <section class="container">
+        <section class="container" id="home">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active mt-5 ">
@@ -121,19 +121,19 @@
         <!-- box section  -->
         <section class="container">
             <div class="row g-4 my-5">
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded">
                         <h1>Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded">
                         <h1>Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="p-3 border bg-info d-flex align-items-center justify-content-between rounded">
                         <h1>Bag</h1>
                         <img src="images/categories/bag.png" alt="">
@@ -142,17 +142,17 @@
             </div>
 
         </section>
-        <!-- card section  -->
-        <section class="container">
+        <!-- card section  shoes-->
+        <section class="container" id="shoes">
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
                     <div class="card h-100 shadow-lg border border-0">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
                         </div>
                         <div class="m-3">
                             <button class="btn btn-warning">Buy Now</button>
@@ -163,9 +163,9 @@
                     <div class="card h-100 shadow-lg border border-0">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                                content.</p>
+                            <h5 class="card-title">Reebok Pump</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
                         </div>
                         <div class="m-3">
                             <button class="btn btn-warning">Buy Now</button>
@@ -176,10 +176,9 @@
                     <div class="card h-100 shadow-lg border border-0">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This card has even longer content than the first to show that equal
-                                height action.</p>
+                            <h5 class="card-title">Reebok All Terrain</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
                         </div>
                         <div class="m-3">
                             <button class="btn btn-warning">Buy Now</button>
@@ -188,8 +187,70 @@
                 </div>
             </div>
         </section>
+        <!-- card section- bags  -->
+
+        <section class="container my-5" id="bags">
+            <h1>Bags</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card h-100 shadow-lg border border-0">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ison Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border border-0">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Biaowang Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 shadow-lg border border-0">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+                                sint. </p>
+                        </div>
+                        <div class="m-3">
+                            <button class="btn btn-warning">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- subscription section  -->
+        <section style="height: 400px;"
+            class="container bg-info d-flex justify-content-center align-items-center my-5 rounded-3" id="subs">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales specials and more</p>
+                <input type="text" placeholder="Your Email Here">
+                <br>
+                <button class="btn btn-warning">Submit</button>
+            </div>
+        </section>
+
     </main>
-    <footer></footer>
+    <footer class="text-center">
+        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
