--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Panda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -49,7 +50,7 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active mt-5 ">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                        <div class="row header-bg-color bg-gradient d-flex align-items-center p-4">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
@@ -57,7 +58,7 @@
                                     tv.
                                 </p>
                                 <h1>$420</h1>
-                                <button type="button" class="btn btn-warning">Buy Now</button>
+                                <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -66,7 +67,7 @@
 
                     </div>
                     <div class="carousel-item active mt-5">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                        <div class="row header-bg-color bg-gradient d-flex align-items-center p-4">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports
                                 </h1>
@@ -74,7 +75,7 @@
                                     tv.
                                 </p>
                                 <h1>$1200</h1>
-                                <button type="button" class="btn btn-warning">Buy Now</button>
+                                <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -83,7 +84,7 @@
 
                     </div>
                     <div class="carousel-item active mt-5">
-                        <div class="row bg-info bg-gradient d-flex align-items-center p-4">
+                        <div class="row header-bg-color bg-gradient d-flex align-items-center p-4">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room
                                 </h1>
@@ -92,7 +93,7 @@
                                     fake sports.
                                 </p>
                                 <h1>$600</h1>
-                                <button type="button" class="btn btn-warning">Buy Now</button>
+                                <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -119,22 +120,22 @@
     </header>
     <main>
         <!-- box section  -->
-        <section class="container">
+        <section class="container box">
             <div class="row g-4 my-5">
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded">
+                    <div class="p-3 border watch-bg d-flex align-items-center justify-content-between rounded">
                         <h1>Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded">
+                    <div class="p-3 border shoes-bg d-flex align-items-center justify-content-between rounded">
                         <h1>Shoes</h1>
                         <img src="images/categories/shoes.png" alt="">
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="p-3 border bg-info d-flex align-items-center justify-content-between rounded">
+                    <div class="p-3 border bag-bg d-flex align-items-center justify-content-between rounded">
                         <h1>Bag</h1>
                         <img src="images/categories/bag.png" alt="">
                     </div>
@@ -155,7 +156,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -168,7 +169,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -181,7 +182,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -201,7 +202,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -214,7 +215,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -227,7 +228,7 @@
                                 sint. </p>
                         </div>
                         <div class="m-3">
-                            <button class="btn btn-warning">Buy Now</button>
+                            <button class="btn">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -236,13 +237,13 @@
 
         <!-- subscription section  -->
         <section style="height: 400px;"
-            class="container bg-info d-flex justify-content-center align-items-center my-5 rounded-3" id="subs">
+            class="container bg-sub d-flex justify-content-center align-items-center my-5 rounded-3" id="subs">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales specials and more</p>
                 <input type="text" placeholder="Your Email Here">
                 <br>
-                <button class="btn btn-warning">Submit</button>
+                <button class="btn mt-1">Submit</button>
             </div>
         </section>
 
