--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <!-- image-slider -->
         <section class="container" id="home">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active mt-5 ">
+                <div class="carousel-inner img-slider">
+                    <div class="carousel-item active mt-5">
                         <div class="row header-bg-color bg-gradient d-flex align-items-center p-4">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone
@@ -57,7 +57,7 @@
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.
                                 </p>
-                                <h1>$420</h1>
+                                <h1 class="price">$420</h1>
                                 <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
@@ -74,7 +74,7 @@
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.
                                 </p>
-                                <h1>$1200</h1>
+                                <h1 class="price">$1200</h1>
                                 <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
@@ -92,7 +92,7 @@
                                     of
                                     fake sports.
                                 </p>
-                                <h1>$600</h1>
+                                <h1 class="price">$600</h1>
                                 <button type="button" class="btn">Buy Now</button>
                             </div>
                             <div class="col-5">
@@ -241,9 +241,9 @@
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales specials and more</p>
-                <input type="text" placeholder="Your Email Here">
+                <input class="form-control" type="text" placeholder="Your Email Here">
                 <br>
-                <button class="btn mt-1">Submit</button>
+                <button class="btn">Submit</button>
             </div>
         </section>
 
