--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
 
     </main>
     <footer class="text-center">
-        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        <p><small>©2020. Panda Commerce. All rights reserved. <a
+                    href="https://www.linkedin.com/in/rahikul-zannat-5599761a0/">Rahikul Zannat</a></small></p>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
